style: fix the style of the top collapsed menu button dropdown

--- a/packages/core/client/src/global.less
+++ b/packages/core/client/src/global.less
@@ -27,9 +27,16 @@
   .rc-virtual-list-scrollbar-thumb {
     background: var(--colorBgScrollBar) !important;
   }
+
   .rc-virtual-list-scrollbar-thumb:hover {
     background: var(--colorBgScrollBarHover) !important;
   }
+
   .rc-virtual-list-scrollbar-thumb:active {
     background: var(--colorBgScrollBarActive) !important;
+  }
+
+  // Fix the style of the top collapsed menu button dropdown
+  .ant-menu-submenu-popup {
+    backdrop-filter: none;
   }
